# real-estate-data-api

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: search_properties.py
src/: main.py  models.py  properties_db.py
tests/: test_main.py
